feat: Add and integrate new RBAC demo video across documentation, footer links, and promotional components.

--- a/content/1.docs/6.helpful-links.md
+++ b/content/1.docs/6.helpful-links.md
@@ -20,3 +20,4 @@ description: A collection of useful resources, repositories, and community links
 - **YouTube**: [https://youtu.be/M9-koXmhB9k](https://youtu.be/M9-koXmhB9k)
 - **YouTube2**: [https://youtu.be/7gW0KW1KtN0](https://youtu.be/7gW0KW1KtN0)
 - **YouTube3**: [https://www.youtube.com/watch?v=Yty3OCYbwOo](https://www.youtube.com/watch?v=Yty3OCYbwOo)
+- **YouTube4**: [https://www.youtube.com/watch?v=W0ju4grRC9M](https://www.youtube.com/watch?v=W0ju4grRC9M)
