--- a/content/1.docs/4.usage/2.permissions.md
+++ b/content/1.docs/4.usage/2.permissions.md
@@ -5,6 +5,8 @@ description: Learn how to manage permissions using the Role-Based Access Control
 
 To manage permissions in your application, you don't need to touch the code structure. Instead, you simply add or modify records in specific database tables. The system uses a **Role-Based Access Control (RBAC)** model.
 
+<iframe width="100%" height="400" src="https://www.youtube.com/embed/W0ju4grRC9M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen class="rounded-xl"></iframe>
+
 ## Core Concepts
 
 *   **Users**: The actual people logging in.
