feat: Allow admin user password to be configured via environment variables, updating seeding logic and documentation.

--- a/content/3.blog/4.nuxt-runtime-config.md
+++ b/content/3.blog/4.nuxt-runtime-config.md
@@ -78,6 +78,7 @@ First, we define the config with a safe default:
 export default defineNuxtConfig({
   runtimeConfig: {
     adminEmail: 'admin@example.com',
+    adminPassword: '$1Password',
     // ...
   }
 })
@@ -95,6 +96,7 @@ export const seedDatabase = async () => {
   const usersToSeed = [
     { 
       email: config.adminEmail, // Uses env var if set, else default
+      password: config.adminPassword, // Uses env var if set, else default
       name: 'Admin User', 
       role: 'admin' 
     },
@@ -111,6 +113,7 @@ Now, a developer using the template can simply add this to their `.env` file to 
 
 ```bash
 NUXT_ADMIN_EMAIL=me@my-startup.com
+NUXT_ADMIN_PASSWORD=$1Password
 ```
 
 ## Summary
