feat: Standardize `status` field with automatic filtering, introduce `list_all` permission, and update resource configuration documentation.

--- a/content/1.docs/1.auto-crud/5.create-schema.md
+++ b/content/1.docs/1.auto-crud/5.create-schema.md
@@ -80,3 +80,11 @@ bun db:generate
 ::
 
 Your API endpoints (e.g., `/api/users`, `/api/posts`) will be automatically available.
+
+## 6. Reserved Field: `status`
+
+Nuxt Auto CRUD includes built-in logic for the `status` field to simplify content visibility.
+
+*   **Automatic Filtering:** If your table contains a column named `status`, the module will **automatically filter** list results. By default, only records with **`status = 'active'`** are returned to non-admin users.
+*   **Recommendation:** If you use the field name `status`, ensure that `'active'` and `'inactive'` are among its options.
+*   **Use Alternatives:** For other state-tracking purposes (e.g., payment status, order steps), use a different field name like `state`, `payment_status`, or `stage` to avoid triggering this automatic filtering behavior.
