--- a/content/1.docs/3.configuration/3.resource-configuration.md
+++ b/content/1.docs/3.configuration/3.resource-configuration.md
@@ -5,25 +5,39 @@ description: Define fine-grained access control and resource policies.
 
 ## Overview
 
-You can define fine-grained access control and resource policies using `autocrud.config.ts` in your project root. This file is optional and useful when you need specific rules per resource.
+You can define fine-grained access control and resource policies in your `nuxt.config.ts` under the `autoCrud` key.
 
 ## Example Configuration
 
 ```typescript
-// autocrud.config.ts
-export default {
-  resources: {
-    users: {
-      // Access Control
-      auth: {
-        // Admin has full access
-        admin: true,
-        // Public (unauthenticated) users can only list and read
-        public: ['list', 'read'],
-      },
-      // Field Visibility
-      publicColumns: ['id', 'name', 'avatar'], // Only these columns are returned to public users
+// nuxt.config.ts
+export default defineNuxtConfig({
+  autoCrud: {
+    resources: {
+      // Guest View: Only these columns are visible to unauthenticated users.
+      // Access control (who can list/read) is managed by your DB permissions.
+      users: ['id', 'name', 'avatar'], 
     },
-  }
-}
+  },
+})
 ```
+
+## Advanced Field Visibility
+
+Currently, `nuxt-auto-crud` simplifies visibility into two tiers:
+1.  **Guest (Unauthenticated)**: Restricted by `publicColumns`.
+2.  **Authenticated (All Roles)**: Sees all fields (except globally hidden ones like `password`).
+
+**Industry Standard for Granular Control:**
+In enterprise applications requiring role-specific field visibility (e.g., "Managers" see salary, "Employees" do not), the standard approach is **Field-Level Security (FLS)** stored in the database or handled via **API Resources/Transformers** in code. 
+
+As `nuxt-auto-crud` focuses on MVP speed and simplicity, role-specific field filtering is currently out of scope for the configuration file. If you require this level of granularity, we recommend:
+- Creating a custom API endpoint for that specific view.
+- Contributing to the project to add DB-based Field Permissions.
+
+## Security Note
+
+Even in full-stack applications where you control the UI, relying on the frontend to "not display" sensitive data is a security vulnerability. The data is still visible in the browser's Network tab. 
+
+*   **Global Hiding:** Fields like `password`, `secret`, and `token` are automatically hidden from **ALL** responses by default.
+*   **Context Hiding:** Use the `resources` config (as shown above) to filter other semi-sensitive fields (like `email` or `phone`) specifically from public guest responses.
