refactor: streamline database paths from `server/database` to `server/db`, update NuxtHub integration, and remove unused API endpoint and type definitions.

--- a/content/1.docs/1.auto-crud/0.index.md
+++ b/content/1.docs/1.auto-crud/0.index.md
@@ -54,7 +54,7 @@ git push -u origin main
 
 ## Migrate Schemas
 
-Define schemas in `server/database/schema.ts` and run:
+Define schemas in `server/db/schema.ts` and run:
 
 ::code-group
 
