--- a/content/1.docs/1.auto-crud/5.create-schema.md
+++ b/content/1.docs/1.auto-crud/5.create-schema.md
@@ -3,18 +3,18 @@ title: Defining Your Database Schema
 description: Learn how to define and organize your database schemas.
 ---
 
-Instead of putting all your tables in a single file, it's best practice to organize them into separate files within a `server/database/schema/` directory.
+Instead of putting all your tables in a single file, it's best practice to organize them into separate files within a `server/db/schema/` directory.
 
-## 1. Create the Schema Directory
+## Step 1: Create the Schema Directory
 
-Create a directory at `server/database/schema/`.
+Create a directory at `server/db/schema/`.
 
-## 2. Create Your First Schema (Users)
+## Step 2: Define Your First Table
 
-Create a file `server/database/schema/users.ts`:
+Create a file `server/db/schema/users.ts`:
 
-```typescript
-// server/database/schema/users.ts
+```ts
+// server/db/schema/users.ts
 import { sqliteTable, text, integer } from 'drizzle-orm/sqlite-core'
 
 export const users = sqliteTable('users', {
@@ -29,10 +29,10 @@ export const users = sqliteTable('users', {
 
 ## 3. Adding New Schemas (e.g., Posts)
 
-To add a new table, simply create a new file. For example, `server/database/schema/posts.ts`:
+To add a new table, simply create a new file. For example, `server/db/schema/posts.ts`:
 
 ```typescript
-// server/database/schema/posts.ts
+// server/db/schema/posts.ts
 import { sqliteTable, text, integer } from 'drizzle-orm/sqlite-core'
 import { users } from './users'
 
@@ -47,10 +47,10 @@ export const posts = sqliteTable('posts', {
 
 ## 4. Export Schemas in Index
 
-You must export all your schema files in `server/database/schema/index.ts` so Drizzle can find them.
+You must export all your schema files in `server/db/schema/index.ts` so Drizzle can find them.
 
 ```typescript
-// server/database/schema/index.ts
+// server/db/schema/index.ts
 export * from './users'
 export * from './posts'
 ```
