--- a/content/1.docs/1.auto-crud/8.custom-setup.md
+++ b/content/1.docs/1.auto-crud/8.custom-setup.md
@@ -69,7 +69,7 @@ The module looks for a `useDrizzle` export in your `drizzlePath` (default: `serv
 // server/utils/drizzle.ts
 import { drizzle } from 'drizzle-orm/better-sqlite3'
 import Database from 'better-sqlite3'
-import * as schema from '../database/schema'
+import * as schema from '../db/schema'
 
 // Initialize the database
 const sqlite = new Database('sqlite.db')
@@ -91,7 +91,7 @@ export { sql, eq, and, or } from 'drizzle-orm'
 // server/utils/drizzle.ts
 import { drizzle } from 'drizzle-orm/libsql'
 import { createClient } from '@libsql/client'
-import * as schema from '../database/schema'
+import * as schema from '../db/schema'
 
 const client = createClient({
   url: process.env.TURSO_DATABASE_URL!,
@@ -118,7 +118,7 @@ export default defineNuxtConfig({
 
   autoCrud: {
     drizzlePath: 'server/utils/drizzle', // Default
-    schemaPath: 'server/database/schema', // Default
+    schemaPath: 'server/db/schema', // Default
   },
 })
 ```
