--- a/content/1.docs/3.configuration/1.module-options.md
+++ b/content/1.docs/3.configuration/1.module-options.md
@@ -9,7 +9,7 @@ description: Configuration options for Nuxt Auto CRUD.
 export default defineNuxtConfig({
   autoCrud: {
     // Path to your database schema file (relative to project root)
-    schemaPath: "server/database/schema", // default
+    schemaPath: "server/db/schema", // default
     
     // Authentication configuration (see "Authentication Configuration" section)
     auth: {
