--- a/content/1.docs/4.usage/4.real-world-recipes.md
+++ b/content/1.docs/4.usage/4.real-world-recipes.md
@@ -14,7 +14,7 @@ This recipe demonstrates how to create a simple "Subscribe" form where public us
 Create a table to store email addresses.
 
 ```typescript
-// server/database/schema/subscribers.ts
+// server/db/schema/subscribers.ts
 import { sqliteTable, text } from 'drizzle-orm/sqlite-core'
 import { systemFields } from './utils'
 
@@ -51,7 +51,7 @@ This recipe demonstrates a "User-Generated Content" system where the public subm
 We include a `status` field to manage visibility.
 
 ```typescript
-// server/database/schema/testimonials.ts
+// server/db/schema/testimonials.ts
 import { sqliteTable, text } from 'drizzle-orm/sqlite-core'
 import { systemFields } from './utils'
 
@@ -82,7 +82,7 @@ Since the generic `/api/testimonials` endpoint might be restricted or return all
 ```typescript
 // server/api/active-testimonials.get.ts
 import { eq, desc } from 'drizzle-orm'
-import { testimonials } from '../database/schema'
+import { testimonials } from '../db/schema'
 import { useDrizzle } from '../utils/drizzle'
 
 export default defineEventHandler(async () => {
