--- a/content/3.blog/1.introducing-nuxt-auto-crud.md
+++ b/content/3.blog/1.introducing-nuxt-auto-crud.md
@@ -36,7 +36,7 @@ It's exhausted just thinking about it.
 3. **Start your server**. Your APIs are ready!
 
 ```typescript
-// server/database/schema.ts
+// server/db/schema.ts
 import { sqliteTable, text, integer } from 'drizzle-orm/sqlite-core'
 
 export const posts = sqliteTable('posts', {
