--- a/content/1.docs/1.auto-crud/4.install-drizzle.md
+++ b/content/1.docs/1.auto-crud/4.install-drizzle.md
@@ -37,8 +37,8 @@ import { defineConfig } from "drizzle-kit";
 
 export default defineConfig({
   dialect: "sqlite",
-  schema: "./server/database/schema/index.ts",
-  out: "./server/database/migrations",
+  schema: "./server/db/schema/index.ts",
+  out: "./server/db/migrations",
 });
 ```
 
@@ -46,18 +46,16 @@ export default defineConfig({
 
 ```ts
 // server/utils/drizzle.ts
-import { drizzle } from "drizzle-orm/d1";
-export { sql, eq, and, or } from "drizzle-orm";
+import { db, schema } from 'hub:db'
+export { sql, eq, and, or } from 'drizzle-orm'
 
-import * as schema from "../database/schema";
-
-export const tables = schema;
+export const tables = schema
 
 export function useDrizzle() {
-  return drizzle(hubDatabase(), { schema });
+  return db
 }
 
-export type User = typeof schema.users.$inferSelect;
+export type User = typeof schema.users.$inferSelect
 ```
 
 ## Add a Convenience Script
@@ -67,7 +65,7 @@ To avoid typing the lengthy `bun run drizzle-kit generate` command every time, a
 // package.json
 {
   "scripts": {
-    "db:generate": "drizzle-kit generate"
+    "db:generate": "nuxt db generate"
   }
 }
 ```
