--- a/content/1.docs/1.auto-crud/7.backend-only.md
+++ b/content/1.docs/1.auto-crud/7.backend-only.md
@@ -16,7 +16,7 @@ In this case, you might handle authentication differently (e.g., validating toke
 export default defineNuxtConfig({
   modules: ['nuxt-auto-crud'],
   autoCrud: {
-    schemaPath: 'server/database/schema',
+    schemaPath: 'server/db/schema',
     // auth: false, // Uncomment this line for testing APIs without auth   
     auth: {
       type: 'jwt', // for app providing backend apis only
@@ -40,8 +40,8 @@ import { defineConfig } from 'drizzle-kit'
 
 export default defineConfig({
   dialect: 'sqlite',
-  schema: './server/database/schema/index.ts',
-  out: './server/database/migrations',
+  schema: './server/db/schema/index.ts',
+  out: './server/db/migrations',
   tablesFilter: ['!_hub_migrations'],
 })
 ```
