feat: Enhance user authentication and authorization with new refresh token API, Drizzle schema updates, profile page, and improved type definitions.

--- a/content/1.docs/1.auto-crud/1.prerequisites.md
+++ b/content/1.docs/1.auto-crud/1.prerequisites.md
@@ -6,8 +6,10 @@ description: Guide for adding Auto Crud to an existing application.
 ## Prerequisites
 
 - Nuxt.js [Modern Full-Stack Framework](/docs/auto-crud/install-nuxt)
-- NuxtHub [Helps Build and deploy Nuxt applications](/docs/auto-crud/install-nuxthub) or [Custom Setup](/docs/auto-crud/custom-setup)
+- NuxtHub [Helps Build and deploy Nuxt applications](/docs/auto-crud/install-nuxthub)
 - Drizzle ORM [Type-Safe ORM for SQL Databases](/docs/auto-crud/install-drizzle)
+- Nuxt Auth Utils [Authentication Utilities](https://github.com/atinux/nuxt-auth-utils)
+- Nuxt Authorization [Authorization Logic](https://github.com/clifordpereira/nuxt-authorization)
 
 Installation steps for these prerequisites are detailed in the following sections.
 
