--- a/content/1.docs/1.auto-crud/4.install-drizzle.md
+++ b/content/1.docs/1.auto-crud/4.install-drizzle.md
@@ -42,20 +42,18 @@ export default defineConfig({
 });
 ```
 
-## Add the following utility function to use Drizzle conveniently:
+## accessing the database
+
+You can access the database instance and schema directly from `hub:db`:
 
 ```ts
-// server/utils/drizzle.ts
 import { db, schema } from 'hub:db'
-export { sql, eq, and, or } from 'drizzle-orm'
+```
 
-export const tables = schema
+And for other utilities:
 
-export function useDrizzle() {
-  return db
-}
-
-export type User = typeof schema.users.$inferSelect
+```ts
+import { sql, eq, and, or } from 'drizzle-orm'
 ```
 
 ## Add a Convenience Script
