--- a/content/1.docs/1.auto-crud/5.create-schema.md
+++ b/content/1.docs/1.auto-crud/5.create-schema.md
@@ -5,15 +5,15 @@ description: Learn how to define and organize your database schemas.
 
 Instead of putting all your tables in a single file, it's best practice to organize them into separate files within a `server/db/schema/` directory.
 
-## Step 1: Create the Schema Directory
+## 1. Create the Schema Directory
 
 Create a directory at `server/db/schema/`.
 
-## Step 2: Define Your First Table
+## 2. Create Your First Schema (Users)
 
 Create a file `server/db/schema/users.ts`:
 
-```ts
+```typescript
 // server/db/schema/users.ts
 import { sqliteTable, text, integer } from 'drizzle-orm/sqlite-core'
 
@@ -29,10 +29,10 @@ export const users = sqliteTable('users', {
 
 ## 3. Adding New Schemas (e.g., Posts)
 
-To add a new table, simply create a new file. For example, `server/db/schema/posts.ts`:
+To add a new table, simply create a new file. For example, `server/database/schema/posts.ts`:
 
 ```typescript
-// server/db/schema/posts.ts
+// server/database/schema/posts.ts
 import { sqliteTable, text, integer } from 'drizzle-orm/sqlite-core'
 import { users } from './users'
 
@@ -47,10 +47,10 @@ export const posts = sqliteTable('posts', {
 
 ## 4. Export Schemas in Index
 
-You must export all your schema files in `server/db/schema/index.ts` so Drizzle can find them.
+You must export all your schema files in `server/database/schema/index.ts` so Drizzle can find them.
 
 ```typescript
-// server/db/schema/index.ts
+// server/database/schema/index.ts
 export * from './users'
 export * from './posts'
 ```
