--- a/content/1.docs/4.usage/4.real-world-recipes.md
+++ b/content/1.docs/4.usage/4.real-world-recipes.md
@@ -83,11 +83,9 @@ Since the generic `/api/testimonials` endpoint might be restricted or return all
 // server/api/active-testimonials.get.ts
 import { eq, desc } from 'drizzle-orm'
 import { testimonials } from '../db/schema'
-import { useDrizzle } from '../utils/drizzle'
+import { db } from 'hub:db'
 
 export default defineEventHandler(async () => {
-  const db = useDrizzle()
-  
   // Fetch only 'active' testimonials
   return await db.select()
     .from(testimonials)
