feat: Optimize data export by implementing dynamic library imports and add comprehensive documentation for data export, social login, and password reset features.

--- a/content/1.docs/3.configuration/2.authentication.md
+++ b/content/1.docs/3.configuration/2.authentication.md
@@ -37,3 +37,60 @@ export default defineNuxtConfig({
   }
 })
 ```
+
+## Social Login
+
+The template integrates with `nuxt-auth-utils` to provide social login capabilities.
+
+### Configuration
+
+Add your OAuth credentials to `runtimeConfig` in `nuxt.config.ts`:
+
+```typescript
+export default defineNuxtConfig({
+  runtimeConfig: {
+    oauth: {
+      github: {
+        clientId: process.env.NUXT_OAUTH_GITHUB_CLIENT_ID,
+        clientSecret: process.env.NUXT_OAUTH_GITHUB_CLIENT_SECRET
+      },
+      google: {
+        clientId: process.env.NUXT_OAUTH_GOOGLE_CLIENT_ID,
+        clientSecret: process.env.NUXT_OAUTH_GOOGLE_CLIENT_SECRET
+      }
+    }
+  }
+})
+```
+
+Supported providers include GitHub and Google. Ensure you have the corresponding environment variables set.
+
+## Password Reset
+
+The template includes a complete password reset flow using either Resend (production) or Nodemailer (local SMTP).
+
+### Configuration
+
+1. **Production (Resend)**: Set `NUXT_RESEND_API_KEY` in your environment.
+2. **Local (Nodemailer)**: Configure SMTP settings in `nuxt.config.ts`:
+
+```typescript
+export default defineNuxtConfig({
+  nodemailer: {
+    from: '"Support" <support@example.com>',
+    host: 'smtp.gmail.com',
+    port: 465,
+    secure: true,
+    auth: {
+      user: 'your-email@gmail.com',
+      pass: 'your-app-password'
+    }
+  }
+})
+```
+
+### Flow
+1. User requests a reset link via `/auth/forgot-password`.
+2. A unique token is generated and emailed to the user.
+3. User clicks the link, which brings them to `/auth/reset-password?token=...`.
+4. User sets a new password.
