feat: Implement configurable UI column hiding and export exclusions via `app.config.ts`.

--- a/content/1.docs/3.configuration/3.resource-configuration.md
+++ b/content/1.docs/3.configuration/3.resource-configuration.md
@@ -25,19 +25,47 @@ export default defineNuxtConfig({
 ## Advanced Field Visibility
 
 Currently, `nuxt-auto-crud` simplifies visibility into two tiers:
-1.  **Guest (Unauthenticated)**: Restricted by `publicColumns`.
-2.  **Authenticated (All Roles)**: Sees all fields (except globally hidden ones like `password`).
+1.  **Guest (Unauthenticated)**: Restricted by `publicColumns` in `nuxt.config.ts`.
+2.  **Authenticated (All Roles)**: Sees all fields (except globally hidden ones).
 
-**Industry Standard for Granular Control:**
-In enterprise applications requiring role-specific field visibility (e.g., "Managers" see salary, "Employees" do not), the standard approach is **Field-Level Security (FLS)** stored in the database or handled via **API Resources/Transformers** in code. 
+### API Resource Control (app.config.ts)
 
-As `nuxt-auto-crud` focuses on MVP speed and simplicity, role-specific field filtering is currently out of scope for the configuration file. If you require this level of granularity, we recommend:
-- Creating a custom API endpoint for that specific view.
-- Contributing to the project to add DB-based Field Permissions.
+For more granular control similar to **Laravel API Resources**, use the `crud` configuration in `app/app.config.ts`. This allows you to hide specific columns from different contexts:
+
+```typescript
+// app.config.ts
+export default defineAppConfig({
+  crud: {
+    // Columns to always hide from the UI table (Authenticated & Guest)
+    globalHide: ['updatedAt', 'deletedAt', 'createdBy', 'updatedBy', 'resetToken'],
+    
+    // Export specific settings
+    exports: {
+      pdf: {
+        // Excluded from ALL resources in PDF
+        globalExclude: ['avatar', 'resetToken', 'resetExpires'],
+        // Resource specific overrides
+        resourceExclude: {
+          users: ['password', 'googleId', 'githubId'],
+        },
+      },
+      excel: {
+        globalExclude: [],
+        resourceExclude: {
+          users: ['password'],
+        },
+      },
+    },
+  },
+})
+```
+
+**Note:** In enterprise applications requiring role-specific field visibility (e.g., "Managers" see salary, "Employees" do not), the standard approach is **Field-Level Security (FLS)** stored in the database. As `nuxt-auto-crud` focuses on MVP speed and simplicity, role-specific field filtering is currently handled via these configuration blocks.
 
 ## Security Note
 
 Even in full-stack applications where you control the UI, relying on the frontend to "not display" sensitive data is a security vulnerability. The data is still visible in the browser's Network tab. 
 
-*   **Global Hiding:** Fields like `password`, `secret`, and `token` are automatically hidden from **ALL** responses by default.
-*   **Context Hiding:** Use the `resources` config (as shown above) to filter other semi-sensitive fields (like `email` or `phone`) specifically from public guest responses.
+*   **Auto-Hiding:** Sensitive fields like `password`, `secret`, and `token` are automatically hidden from **ALL** responses by the `nuxt-auto-crud` module.
+*   **Custom Hiding:** Use `globalHide` in `app.config.ts` to hide additional fields (like `updatedAt` or `email`) that the module doesn't hide by default.
+*   **Context Hiding:** Use the `resources` config in `nuxt.config.ts` to filter fields specifically from public guest responses.
