--- a/content/1.docs/4.usage/7.data-export.md
+++ b/content/1.docs/4.usage/7.data-export.md
@@ -23,6 +23,33 @@ In any Auto CRUD table, click the **Export** button to see the available formats
     - Professional styling with slate-themed headers.
     - Page numbering and confidentiality footer.
 
+## Column Filtering (app.config.ts)
+
+You can control which columns are included in your exports using the `crud` configuration in `app/app.config.ts`. This gives you the flexibility to hide sensitive fields like passwords or internal IDs from your exported documents.
+
+```typescript
+// app.config.ts
+export default defineAppConfig({
+  crud: {
+    exports: {
+      pdf: {
+        // Excluded from ALL resources in PDF
+        globalExclude: ['avatar', 'resetToken'],
+        // Resource specific overrides
+        resourceExclude: {
+          users: ['password', 'googleId'],
+        },
+      },
+      excel: {
+        resourceExclude: {
+          users: ['password'],
+        },
+      },
+    },
+  },
+})
+```
+
 ## Customization
 
 The export logic is encapsulated in the `useExport` composable. You can find it at `app/composables/useExport.ts`.
