feat: Update NuxtHub database configuration to use `db` property, refine schema, and enhance error handling.

--- a/content/1.docs/1.auto-crud/1.prerequisites.md
+++ b/content/1.docs/1.auto-crud/1.prerequisites.md
@@ -16,7 +16,7 @@ Installation steps for these prerequisites are detailed in the following section
 ## Once installed, all you need to do is:
 
 1. Define your model schemas in `/server/db/schema.ts`.
-2. Run `bun run db:generate`.
+2. Run `npx nuxi db generate`.
 3. That's it! Your CRUD endpoints are ready:
 
 ```bash
