--- a/content/1.docs/1.auto-crud/3.install-nuxthub.md
+++ b/content/1.docs/1.auto-crud/3.install-nuxthub.md
@@ -36,7 +36,7 @@ bun add --dev wrangler
 export default defineNuxtConfig({
   modules: ["@nuxthub/core"],
   hub: {
-    database: true
+    db: 'sqlite',
   },
 });
 ```
