--- a/content/1.docs/3.configuration/2.authentication.md
+++ b/content/1.docs/3.configuration/2.authentication.md
@@ -72,25 +72,10 @@ The template includes a complete password reset flow using either Resend (produc
 ### Configuration
 
 1. **Production (Resend)**: Set `NUXT_RESEND_API_KEY` in your environment.
-2. **Local (Nodemailer)**: Configure SMTP settings in `nuxt.config.ts`:
-
-```typescript
-export default defineNuxtConfig({
-  nodemailer: {
-    from: '"Support" <support@example.com>',
-    host: 'smtp.gmail.com',
-    port: 465,
-    secure: true,
-    auth: {
-      user: 'your-email@gmail.com',
-      pass: 'your-app-password'
-    }
-  }
-})
-```
+2. **Local**: In development, if no `NUXT_RESEND_API_KEY` is present, the reset link will be logged to the server console.
 
 ### Flow
 1. User requests a reset link via `/auth/forgot-password`.
-2. A unique token is generated and emailed to the user.
+2. A unique token is generated and emailed to the user (or logged).
 3. User clicks the link, which brings them to `/auth/reset-password?token=...`.
 4. User sets a new password.
