--- a/content/1.docs/4.usage/5.deployment.md
+++ b/content/1.docs/4.usage/5.deployment.md
@@ -14,11 +14,12 @@ Ensure you set the following environment variables in your production environmen
 - **`NUXT_SESSION_PASSWORD`**: A long, random string (at least 32 characters) used to encrypt user sessions.
 - **`NUXT_ADMIN_EMAIL`**: The email address of the initial admin user. This is used for seeding the first admin account.
 - **`NUXT_ADMIN_PASSWORD`**: The initial password for the admin account.
-- **`NUXT_PUBLIC_SITE_URL`**: Your production URL (e.g., `https://my-app.nuxt.dev`). Required for generating correct absolute URLs (e.g., for Open Graph images and password resets).
 - **`NUXT_OAUTH_GITHUB_CLIENT_ID`** & **`NUXT_OAUTH_GITHUB_CLIENT_SECRET`**: (Optional) For GitHub Login.
 - **`NUXT_OAUTH_GOOGLE_CLIENT_ID`** & **`NUXT_OAUTH_GOOGLE_CLIENT_SECRET`**: (Optional) For Google Login.
 - **`NUXT_EMAIL_FROM`**: The sender address for emails (e.g., `"Auth" <noreply@example.com>`).
 - **`NUXT_RESEND_API_KEY`**: (Optional) Your Resend API key for sending production emails.
+- **`NUXT_PUBLIC_GA_ID`**: (Optional) Your Google Analytics 4 property ID for tracking user analytics and site performance.
+- **`NUXT_PUBLIC_ADS_ID`**: (Optional) Your Google Ads conversion tracking ID for monitoring ad performance and conversions.
 
 ## 2. Database Migrations and Seeding
 
