feat: Introduce granular `list_own` and `read_own` permissions, add data export and real-world recipes documentation, and update various authentication and UI components.

--- a/content/1.docs/4.usage/2.permissions.md
+++ b/content/1.docs/4.usage/2.permissions.md
@@ -54,6 +54,28 @@ Finally, to give a user these powers, you just assign them the role.
 | **`role_resource_permissions`** | **The Master Switch**. Connects Role + Resource + Action. |
 | **`users`** | Assigns a Role to a specific person via the `Role` field. |
 
+## Owner-based Permissions
+
+In addition to standard actions, you can assign **Ownership Permissions** for granular control:
+
+*   **`list`**: View a list of *active* records.
+*   **`list_all`**: View *all* records, including inactive ones (e.g., status='draft').
+*   **`list_own`**: View **only** records created by the user.
+*   **`update_own`**: Update a record **only if** the user created it.
+*   **`delete_own`**: Delete a record **only if** the user created it.
+
+### Prerequisites
+For ownership permissions to work, the table must track who created the record. Ensure your schema includes a `createdBy` field:
+
+```typescript
+export const posts = sqliteTable('posts', {
+  // ...
+  createdBy: integer('created_by'),
+})
+```
+
+The system automatically checks if `createdBy` matches the logged-in user's ID.
+
 ## Public Access
 
 Public (unauthenticated) access is controlled by the `public` role in the database. Assign permissions to the `public` role to allow access to resources for non-logged-in users.
