--- a/content/1.docs/4.usage/3.database-management.md
+++ b/content/1.docs/4.usage/3.database-management.md
@@ -26,7 +26,12 @@ Seeding is crucial for setting up your initial RBAC structure (Roles, Resources,
 
 ### Automatic Seeding
 
-In the starter template, the database is **automatically seeded** when you attempt to log in as `admin@example.com` for the first time. This ensures that your production or development environment is always ready with the necessary roles and permissions.
+In the starter template, the database is **automatically seeded** when the system detects an attempt to log in using the configured admin email.
+
+*   By default, this is `admin@example.com`.
+*   You can configure this by setting the `NUXT_ADMIN_EMAIL` environment variable.
+
+This ensures that your production or development environment is always initialized with the necessary roles, resources, and permissions upon the first admin login.
 
 ### Customizing the Seed Data
 
