feat: Allow seeding custom roles via app configuration and update documentation.

--- a/content/1.docs/3.configuration/3.resource-configuration.md
+++ b/content/1.docs/3.configuration/3.resource-configuration.md
@@ -36,6 +36,9 @@ For more granular control similar to **Laravel API Resources**, use the `crud` c
 // app.config.ts
 export default defineAppConfig({
   crud: {
+    // Roles to seed (excluding system roles: admin, manager, user, public)
+    rolesToSeed: ['moderator', 'customer'],
+
     // Columns to always hide from the UI table (Authenticated & Guest)
     globalHide: ['updatedAt', 'deletedAt', 'createdBy', 'updatedBy', 'resetToken'],
     
